// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Probando el componente <Calendar2/> Deberia mostrar <Calendar2/> correctamente 1`] = `
<div
  className="makeStyles-root-1"
>
  <ThemeProvider
    theme={
      Object {
        "breakpoints": Object {
          "between": [Function],
          "down": [Function],
          "keys": Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ],
          "only": [Function],
          "unit": "px",
          "up": [Function],
          "values": Object {
            "lg": 1200,
            "md": 900,
            "sm": 600,
            "xl": 1536,
            "xs": 0,
          },
        },
        "components": Object {},
        "direction": "ltr",
        "mixins": Object {
          "toolbar": Object {
            "@media (min-width:0px) and (orientation: landscape)": Object {
              "minHeight": 48,
            },
            "@media (min-width:600px)": Object {
              "minHeight": 64,
            },
            "minHeight": 56,
          },
        },
        "palette": Object {
          "action": Object {
            "activatedOpacity": 0.12,
            "active": "rgba(0, 0, 0, 0.54)",
            "disabled": "rgba(0, 0, 0, 0.26)",
            "disabledBackground": "rgba(0, 0, 0, 0.12)",
            "disabledOpacity": 0.38,
            "focus": "rgba(0, 0, 0, 0.12)",
            "focusOpacity": 0.12,
            "hover": "rgba(0, 0, 0, 0.04)",
            "hoverOpacity": 0.04,
            "selected": "rgba(0, 0, 0, 0.08)",
            "selectedOpacity": 0.08,
          },
          "augmentColor": [Function],
          "background": Object {
            "default": "#fff",
            "paper": "#fff",
          },
          "common": Object {
            "black": "#000",
            "white": "#fff",
          },
          "contrastThreshold": 3,
          "divider": "rgba(0, 0, 0, 0.12)",
          "error": Object {
            "contrastText": "#fff",
            "dark": "#c62828",
            "light": "#ef5350",
            "main": "#d32f2f",
          },
          "getContrastText": [Function],
          "grey": Object {
            "100": "#f5f5f5",
            "200": "#eeeeee",
            "300": "#e0e0e0",
            "400": "#bdbdbd",
            "50": "#fafafa",
            "500": "#9e9e9e",
            "600": "#757575",
            "700": "#616161",
            "800": "#424242",
            "900": "#212121",
            "A100": "#f5f5f5",
            "A200": "#eeeeee",
            "A400": "#bdbdbd",
            "A700": "#616161",
          },
          "info": Object {
            "contrastText": "#fff",
            "dark": "#01579b",
            "light": "#03a9f4",
            "main": "#0288d1",
          },
          "mode": "light",
          "primary": Object {
            "contrastText": "#fff",
            "dark": "rgb(178, 0, 148)",
            "light": "rgb(255, 51, 220)",
            "main": "#ff00d4",
          },
          "secondary": Object {
            "contrastText": "#fff",
            "dark": "#7b1fa2",
            "light": "#ba68c8",
            "main": "#9c27b0",
          },
          "success": Object {
            "contrastText": "#fff",
            "dark": "#1b5e20",
            "light": "#4caf50",
            "main": "#2e7d32",
          },
          "text": Object {
            "disabled": "rgba(0, 0, 0, 0.38)",
            "primary": "rgba(0, 0, 0, 0.87)",
            "secondary": "rgba(0, 0, 0, 0.6)",
          },
          "tonalOffset": 0.2,
          "warning": Object {
            "contrastText": "#fff",
            "dark": "#e65100",
            "light": "#ff9800",
            "main": "#ED6C02",
          },
        },
        "shadows": Array [
          "none",
          "0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12)",
          "0px 3px 1px -2px rgba(0,0,0,0.2),0px 2px 2px 0px rgba(0,0,0,0.14),0px 1px 5px 0px rgba(0,0,0,0.12)",
          "0px 3px 3px -2px rgba(0,0,0,0.2),0px 3px 4px 0px rgba(0,0,0,0.14),0px 1px 8px 0px rgba(0,0,0,0.12)",
          "0px 2px 4px -1px rgba(0,0,0,0.2),0px 4px 5px 0px rgba(0,0,0,0.14),0px 1px 10px 0px rgba(0,0,0,0.12)",
          "0px 3px 5px -1px rgba(0,0,0,0.2),0px 5px 8px 0px rgba(0,0,0,0.14),0px 1px 14px 0px rgba(0,0,0,0.12)",
          "0px 3px 5px -1px rgba(0,0,0,0.2),0px 6px 10px 0px rgba(0,0,0,0.14),0px 1px 18px 0px rgba(0,0,0,0.12)",
          "0px 4px 5px -2px rgba(0,0,0,0.2),0px 7px 10px 1px rgba(0,0,0,0.14),0px 2px 16px 1px rgba(0,0,0,0.12)",
          "0px 5px 5px -3px rgba(0,0,0,0.2),0px 8px 10px 1px rgba(0,0,0,0.14),0px 3px 14px 2px rgba(0,0,0,0.12)",
          "0px 5px 6px -3px rgba(0,0,0,0.2),0px 9px 12px 1px rgba(0,0,0,0.14),0px 3px 16px 2px rgba(0,0,0,0.12)",
          "0px 6px 6px -3px rgba(0,0,0,0.2),0px 10px 14px 1px rgba(0,0,0,0.14),0px 4px 18px 3px rgba(0,0,0,0.12)",
          "0px 6px 7px -4px rgba(0,0,0,0.2),0px 11px 15px 1px rgba(0,0,0,0.14),0px 4px 20px 3px rgba(0,0,0,0.12)",
          "0px 7px 8px -4px rgba(0,0,0,0.2),0px 12px 17px 2px rgba(0,0,0,0.14),0px 5px 22px 4px rgba(0,0,0,0.12)",
          "0px 7px 8px -4px rgba(0,0,0,0.2),0px 13px 19px 2px rgba(0,0,0,0.14),0px 5px 24px 4px rgba(0,0,0,0.12)",
          "0px 7px 9px -4px rgba(0,0,0,0.2),0px 14px 21px 2px rgba(0,0,0,0.14),0px 5px 26px 4px rgba(0,0,0,0.12)",
          "0px 8px 9px -5px rgba(0,0,0,0.2),0px 15px 22px 2px rgba(0,0,0,0.14),0px 6px 28px 5px rgba(0,0,0,0.12)",
          "0px 8px 10px -5px rgba(0,0,0,0.2),0px 16px 24px 2px rgba(0,0,0,0.14),0px 6px 30px 5px rgba(0,0,0,0.12)",
          "0px 8px 11px -5px rgba(0,0,0,0.2),0px 17px 26px 2px rgba(0,0,0,0.14),0px 6px 32px 5px rgba(0,0,0,0.12)",
          "0px 9px 11px -5px rgba(0,0,0,0.2),0px 18px 28px 2px rgba(0,0,0,0.14),0px 7px 34px 6px rgba(0,0,0,0.12)",
          "0px 9px 12px -6px rgba(0,0,0,0.2),0px 19px 29px 2px rgba(0,0,0,0.14),0px 7px 36px 6px rgba(0,0,0,0.12)",
          "0px 10px 13px -6px rgba(0,0,0,0.2),0px 20px 31px 3px rgba(0,0,0,0.14),0px 8px 38px 7px rgba(0,0,0,0.12)",
          "0px 10px 13px -6px rgba(0,0,0,0.2),0px 21px 33px 3px rgba(0,0,0,0.14),0px 8px 40px 7px rgba(0,0,0,0.12)",
          "0px 10px 14px -6px rgba(0,0,0,0.2),0px 22px 35px 3px rgba(0,0,0,0.14),0px 8px 42px 7px rgba(0,0,0,0.12)",
          "0px 11px 14px -7px rgba(0,0,0,0.2),0px 23px 36px 3px rgba(0,0,0,0.14),0px 9px 44px 8px rgba(0,0,0,0.12)",
          "0px 11px 15px -7px rgba(0,0,0,0.2),0px 24px 38px 3px rgba(0,0,0,0.14),0px 9px 46px 8px rgba(0,0,0,0.12)",
        ],
        "shape": Object {
          "borderRadius": 4,
        },
        "spacing": [Function],
        "transitions": Object {
          "create": [Function],
          "duration": Object {
            "complex": 375,
            "enteringScreen": 225,
            "leavingScreen": 195,
            "short": 250,
            "shorter": 200,
            "shortest": 150,
            "standard": 300,
          },
          "easing": Object {
            "easeIn": "cubic-bezier(0.4, 0, 1, 1)",
            "easeInOut": "cubic-bezier(0.4, 0, 0.2, 1)",
            "easeOut": "cubic-bezier(0.0, 0, 0.2, 1)",
            "sharp": "cubic-bezier(0.4, 0, 0.6, 1)",
          },
          "getAutoHeightDuration": [Function],
        },
        "typography": Object {
          "body1": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
            "fontSize": "1rem",
            "fontWeight": 400,
            "letterSpacing": "0.00938em",
            "lineHeight": 1.5,
          },
          "body2": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
            "fontSize": "0.875rem",
            "fontWeight": 400,
            "letterSpacing": "0.01071em",
            "lineHeight": 1.43,
          },
          "button": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
            "fontSize": "0.875rem",
            "fontWeight": 500,
            "letterSpacing": "0.02857em",
            "lineHeight": 1.75,
            "textTransform": "uppercase",
          },
          "caption": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
            "fontSize": "0.75rem",
            "fontWeight": 400,
            "letterSpacing": "0.03333em",
            "lineHeight": 1.66,
          },
          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
          "fontSize": 14,
          "fontWeightBold": 700,
          "fontWeightLight": 300,
          "fontWeightMedium": 500,
          "fontWeightRegular": 400,
          "h1": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
            "fontSize": "6rem",
            "fontWeight": 300,
            "letterSpacing": "-0.01562em",
            "lineHeight": 1.167,
          },
          "h2": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
            "fontSize": "3.75rem",
            "fontWeight": 300,
            "letterSpacing": "-0.00833em",
            "lineHeight": 1.2,
          },
          "h3": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
            "fontSize": "3rem",
            "fontWeight": 400,
            "letterSpacing": "0em",
            "lineHeight": 1.167,
          },
          "h4": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
            "fontSize": "2.125rem",
            "fontWeight": 400,
            "letterSpacing": "0.00735em",
            "lineHeight": 1.235,
          },
          "h5": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
            "fontSize": "1.5rem",
            "fontWeight": 400,
            "letterSpacing": "0em",
            "lineHeight": 1.334,
          },
          "h6": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
            "fontSize": "1.25rem",
            "fontWeight": 500,
            "letterSpacing": "0.0075em",
            "lineHeight": 1.6,
          },
          "htmlFontSize": 16,
          "overline": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
            "fontSize": "0.75rem",
            "fontWeight": 400,
            "letterSpacing": "0.08333em",
            "lineHeight": 2.66,
            "textTransform": "uppercase",
          },
          "pxToRem": [Function],
          "subtitle1": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
            "fontSize": "1rem",
            "fontWeight": 400,
            "letterSpacing": "0.00938em",
            "lineHeight": 1.75,
          },
          "subtitle2": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
            "fontSize": "0.875rem",
            "fontWeight": 500,
            "letterSpacing": "0.00714em",
            "lineHeight": 1.57,
          },
        },
        "zIndex": Object {
          "appBar": 1100,
          "drawer": 1200,
          "mobileStepper": 1000,
          "modal": 1300,
          "snackbar": 1400,
          "speedDial": 1050,
          "tooltip": 1500,
        },
      }
    }
  >
    <LocalizationProvider
      dateAdapter={[Function]}
    >
      <ForwardRef(StaticDateRangePicker)
        calendars={2}
        className="makeStyles-root-1"
        displayStaticWrapperAs="desktop"
        onChange={[Function]}
        renderInput={[Function]}
        value={
          Array [
            null,
            null,
          ]
        }
      />
    </LocalizationProvider>
  </ThemeProvider>
</div>
`;

exports[`Probando el componente <CarouselModal/> Deberia mostrar <CarouselModal/> correctamente 1`] = `
<div>
  <ModalGateway
    target={<body />}
  />
</div>
`;

exports[`Probando el componente <DateBlock/> Deberia mostrar <DateBlock/> correctamente 1`] = `
<div
  className="container delimiter"
>
  <div
    className="subContainer delimiterChild"
  >
    <h2>
      Fechas Disponibles
    </h2>
    <div
      className="calendario"
    >
      <Calendar2
        calendarState="visible"
        responsiveness="desktop"
      />
      <div
        className="contenedor"
      >
        <p
          className="negrita"
        >
          Agregá tus fechas de viaje para tener precios exactos
        </p>
        <button
          className="selectedDatesButton"
        >
          Iniciar reservar
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Probando el componente <DescriptionBar/> Deberia mostrar <DescriptionBar/> correctamente 1`] = `
<div
  className="descripcionBar delimiter"
>
  <div
    className="descripcionBarChild delimiterChild"
  >
    <h2>
      Alójate en el corazón de 
      ciudad
    </h2>
    <p>
      descripcion hotel
    </p>
  </div>
</div>
`;

exports[`Probando el componente <FeaturesBar/> Deberia mostrar <FeaturesBar/> correctamente 1`] = `
<div
  className="featuresBar delimiter"
>
  <div
    className="featuresBarChild delimiterChild"
  >
    <h2>
      ¿Qué ofrece este lugar?
    </h2>
    <div
      className="icons"
    >
      <p
        key="0"
      >
        <img
          alt="wifi"
          src="wifi.svg"
        />
        wifi
      </p>
      <p
        key="1"
      >
        <img
          alt="pool"
          src="pool.svg"
        />
        pool
      </p>
    </div>
  </div>
</div>
`;

exports[`Probando el componente <ImageBar/> Deberia mostrar <ImageBar/> correctamente con una imagen 1`] = `
<div
  className="imageBar delimiter"
>
  <div
    className="imageBarChild delimiterChild"
  >
    <div
      className="barraSup"
    >
      <img
        alt="iconSocial"
        className="iconImage"
        onClick={[Function]}
        src="iconSocial.svg"
      />
      <img
        alt="iconHeart"
        className="iconImage"
        src="iconHeart.svg"
      />
    </div>
    <div
      className="barraInf"
    >
      <div
        className="barraIzq"
      >
        <img
          alt="fotoImagen1"
          src="https://media.istockphoto.com/photos/downtown-cleveland-hotel-entrance-and-waiting-taxi-cab-picture-id472899538?s=612x612"
        />
      </div>
      <div
        className="barraDer"
      >
        <img
          alt="fotoImagen1"
          src="https://media.istockphoto.com/photos/downtown-cleveland-hotel-entrance-and-waiting-taxi-cab-picture-id472899538?s=612x612"
        />
        <img
          alt="fotoImagen1"
          src="https://media.istockphoto.com/photos/downtown-cleveland-hotel-entrance-and-waiting-taxi-cab-picture-id472899538?s=612x612"
        />
        <img
          alt="fotoImagen1"
          src="https://media.istockphoto.com/photos/downtown-cleveland-hotel-entrance-and-waiting-taxi-cab-picture-id472899538?s=612x612"
        />
        <img
          alt="fotoImagen1"
          src="https://media.istockphoto.com/photos/downtown-cleveland-hotel-entrance-and-waiting-taxi-cab-picture-id472899538?s=612x612"
        />
        <div
          className="verMas"
          onClick={[Function]}
        >
          Ver Más
        </div>
      </div>
      <div
        className="slider"
        onClick={[Function]}
      >
        <img
          alt="fotoImagen1"
          src="https://media.istockphoto.com/photos/downtown-cleveland-hotel-entrance-and-waiting-taxi-cab-picture-id472899538?s=612x612"
        />
        <p>
          1/1
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Probando el componente <ImageBar/> Deberia mostrar <ImageBar/> correctamente con varias imagenes 1`] = `
<div
  className="imageBar delimiter"
>
  <div
    className="imageBarChild delimiterChild"
  >
    <div
      className="barraSup"
    >
      <img
        alt="iconSocial"
        className="iconImage"
        onClick={[Function]}
        src="iconSocial.svg"
      />
      <img
        alt="iconHeart"
        className="iconImage"
        src="iconHeart.svg"
      />
    </div>
    <div
      className="barraInf"
    >
      <div
        className="barraIzq"
      >
        <img
          alt="fotoImagen1"
          src="https://media.istockphoto.com/photos/downtown-cleveland-hotel-entrance-and-waiting-taxi-cab-picture-id472899538?s=612x612"
        />
      </div>
      <div
        className="barraDer"
      >
        <img
          alt="fotoImagen1"
          src="https://media.istockphoto.com/photos/downtown-cleveland-hotel-entrance-and-waiting-taxi-cab-picture-id472899538?s=612x612"
        />
        <img
          alt="fotoImagen1"
          src="https://media.istockphoto.com/photos/downtown-cleveland-hotel-entrance-and-waiting-taxi-cab-picture-id472899538?s=612x612"
        />
        <img
          alt="fotoImagen1"
          src="https://media.istockphoto.com/photos/downtown-cleveland-hotel-entrance-and-waiting-taxi-cab-picture-id472899538?s=612x612"
        />
        <img
          alt="fotoImagen1"
          src="https://media.istockphoto.com/photos/downtown-cleveland-hotel-entrance-and-waiting-taxi-cab-picture-id472899538?s=612x612"
        />
        <div
          className="verMas"
          onClick={[Function]}
        >
          Ver Más
        </div>
      </div>
      <div
        className="slider"
        onClick={[Function]}
      >
        <img
          alt="fotoImagen1"
          src="https://media.istockphoto.com/photos/hotel-reception-lobby-picture-id1292355630"
        />
        <p>
          2/3
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Probando el componente <InfoBar/> Deberia mostrar <InfoBar/> correctamente 1`] = `
<div
  className="infoBar delimiter"
>
  <div
    className="infoBarChild delimiterChild"
  >
    <h2>
      ¿Qué tenés que saber?
    </h2>
    <div
      className="info"
    >
      <div>
        <h3>
          Normas de la casa
        </h3>
        <p
          key="0"
        >
          normas1
        </p>
        <p
          key="1"
        >
          normas2
        </p>
        <p
          key="2"
        >
          normas3
        </p>
      </div>
      <div>
        <h3>
          Salud y Seguridad
        </h3>
        <p
          key="0"
        >
          salud1
        </p>
        <p
          key="1"
        >
          salud2
        </p>
        <p
          key="2"
        >
          salud3
        </p>
      </div>
      <div>
        <h3>
          Política de Cancelación
        </h3>
        <p
          key="0"
        >
          politicas1
        </p>
        <p
          key="1"
        >
          politicas2
        </p>
        <p
          key="2"
        >
          politicas3
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Probando el componente <Map/> Deberia mostrar <Map> correctamente 1`] = `
<LoadScript
  googleMapsApiKey="AIzaSyDoTLld8oN8wZm0avj07nwEv0FXqdfiaOE"
  id="script-loader"
  loadingElement={
    <p>
      Cargando
    </p>
  }
  version="weekly"
>
  <GoogleMap
    center={
      Object {
        "lat": undefined,
        "lng": undefined,
      }
    }
    mapContainerStyle={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  >
    <Marker
      position={
        Object {
          "lat": undefined,
          "lng": undefined,
        }
      }
    />
  </GoogleMap>
</LoadScript>
`;

exports[`Probando el componente <MapBar/> Deberia mostrar <MapBar> correctamente 1`] = `
<div
  className="mapBar delimiter"
>
  <div
    className="mapBarChild delimiterChild"
  >
    <h2>
      ¿Dónde vas a estar?
    </h2>
    <p>
      ciudad , pais
    </p>
    <div
      className="map"
    >
      <Memo(Map)
        latitude={4.111784}
        longitude={-73.6396047}
        zoom={15}
      />
    </div>
  </div>
</div>
`;

exports[`Probando el componente <MapModal/> Deberia mostrar <MapModal> correctamente 1`] = `
<ModalGateway
  target={<body />}
/>
`;

exports[`Probando el componente <ScoreBar/> Deberia mostrar <ScoreBar/> correctamente con calificacion de 1.1 1`] = `
<div
  className="scoreBar delimiter"
>
  <div
    className="scoreBarChild delimiterChild"
  >
    <div
      className="barraIzq"
    >
      <p>
         
        <img
          alt="iconLocation"
          className="iconLocation"
          src="iconLocation.svg"
        />
          
         ciudad , pais
      </p>
      <p
        className="scoreBarReference"
      >
        referencia
      </p>
    </div>
    <div
      className="barraDer"
    >
      <div
        className="calificacionLetra"
      >
        <p>
          Malo
        </p>
        <div
          className="calificacionEstrellas"
        >
          <svg
            fill="none"
            height="13"
            viewBox="0 0 15 13"
            width="15"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.27778 0L8.91174 4.83688H14.1994L9.92159 7.82624L11.5555 12.6631L7.27778 9.67376L3.00001 12.6631L4.63397 7.82624L0.3562 4.83688H5.64382L7.27778 0Z"
              fill="#1DBEB4"
            />
          </svg>
        </div>
      </div>
      <p
        className="calificacionEntero"
      >
        1
      </p>
    </div>
  </div>
</div>
`;

exports[`Probando el componente <ScoreBar/> Deberia mostrar <ScoreBar/> correctamente con calificacion de 3.1 1`] = `
<div
  className="scoreBar delimiter"
>
  <div
    className="scoreBarChild delimiterChild"
  >
    <div
      className="barraIzq"
    >
      <p>
         
        <img
          alt="iconLocation"
          className="iconLocation"
          src="iconLocation.svg"
        />
          
         ciudad , pais
      </p>
      <p
        className="scoreBarReference"
      >
        referencia
      </p>
    </div>
    <div
      className="barraDer"
    >
      <div
        className="calificacionLetra"
      >
        <p>
          Regular
        </p>
        <div
          className="calificacionEstrellas"
        >
          <svg
            fill="none"
            height="13"
            viewBox="0 0 15 13"
            width="15"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.27778 0L8.91174 4.83688H14.1994L9.92159 7.82624L11.5555 12.6631L7.27778 9.67376L3.00001 12.6631L4.63397 7.82624L0.3562 4.83688H5.64382L7.27778 0Z"
              fill="#1DBEB4"
            />
          </svg>
          <svg
            fill="none"
            height="13"
            viewBox="0 0 15 13"
            width="15"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.27778 0L8.91174 4.83688H14.1994L9.92159 7.82624L11.5555 12.6631L7.27778 9.67376L3.00001 12.6631L4.63397 7.82624L0.3562 4.83688H5.64382L7.27778 0Z"
              fill="#1DBEB4"
            />
          </svg>
        </div>
      </div>
      <p
        className="calificacionEntero"
      >
        3
      </p>
    </div>
  </div>
</div>
`;

exports[`Probando el componente <ScoreBar/> Deberia mostrar <ScoreBar/> correctamente con calificacion de 5.1 1`] = `
<div
  className="scoreBar delimiter"
>
  <div
    className="scoreBarChild delimiterChild"
  >
    <div
      className="barraIzq"
    >
      <p>
         
        <img
          alt="iconLocation"
          className="iconLocation"
          src="iconLocation.svg"
        />
          
         ciudad , pais
      </p>
      <p
        className="scoreBarReference"
      >
        referencia
      </p>
    </div>
    <div
      className="barraDer"
    >
      <div
        className="calificacionLetra"
      >
        <p>
          Bueno
        </p>
        <div
          className="calificacionEstrellas"
        >
          <svg
            fill="none"
            height="13"
            viewBox="0 0 15 13"
            width="15"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.27778 0L8.91174 4.83688H14.1994L9.92159 7.82624L11.5555 12.6631L7.27778 9.67376L3.00001 12.6631L4.63397 7.82624L0.3562 4.83688H5.64382L7.27778 0Z"
              fill="#1DBEB4"
            />
          </svg>
          <svg
            fill="none"
            height="13"
            viewBox="0 0 15 13"
            width="15"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.27778 0L8.91174 4.83688H14.1994L9.92159 7.82624L11.5555 12.6631L7.27778 9.67376L3.00001 12.6631L4.63397 7.82624L0.3562 4.83688H5.64382L7.27778 0Z"
              fill="#1DBEB4"
            />
          </svg>
          <svg
            fill="none"
            height="13"
            viewBox="0 0 15 13"
            width="15"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.27778 0L8.91174 4.83688H14.1994L9.92159 7.82624L11.5555 12.6631L7.27778 9.67376L3.00001 12.6631L4.63397 7.82624L0.3562 4.83688H5.64382L7.27778 0Z"
              fill="#1DBEB4"
            />
          </svg>
        </div>
      </div>
      <p
        className="calificacionEntero"
      >
        5
      </p>
    </div>
  </div>
</div>
`;

exports[`Probando el componente <ScoreBar/> Deberia mostrar <ScoreBar/> correctamente con calificacion de 6.1 1`] = `
<div
  className="scoreBar delimiter"
>
  <div
    className="scoreBarChild delimiterChild"
  >
    <div
      className="barraIzq"
    >
      <p>
         
        <img
          alt="iconLocation"
          className="iconLocation"
          src="iconLocation.svg"
        />
          
         ciudad , pais
      </p>
      <p
        className="scoreBarReference"
      >
        referencia
      </p>
    </div>
    <div
      className="barraDer"
    >
      <div
        className="calificacionLetra"
      >
        <p>
          Muy Bueno
        </p>
        <div
          className="calificacionEstrellas"
        >
          <svg
            fill="none"
            height="13"
            viewBox="0 0 15 13"
            width="15"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.27778 0L8.91174 4.83688H14.1994L9.92159 7.82624L11.5555 12.6631L7.27778 9.67376L3.00001 12.6631L4.63397 7.82624L0.3562 4.83688H5.64382L7.27778 0Z"
              fill="#1DBEB4"
            />
          </svg>
          <svg
            fill="none"
            height="13"
            viewBox="0 0 15 13"
            width="15"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.27778 0L8.91174 4.83688H14.1994L9.92159 7.82624L11.5555 12.6631L7.27778 9.67376L3.00001 12.6631L4.63397 7.82624L0.3562 4.83688H5.64382L7.27778 0Z"
              fill="#1DBEB4"
            />
          </svg>
          <svg
            fill="none"
            height="13"
            viewBox="0 0 15 13"
            width="15"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.27778 0L8.91174 4.83688H14.1994L9.92159 7.82624L11.5555 12.6631L7.27778 9.67376L3.00001 12.6631L4.63397 7.82624L0.3562 4.83688H5.64382L7.27778 0Z"
              fill="#1DBEB4"
            />
          </svg>
          <svg
            fill="none"
            height="13"
            viewBox="0 0 15 13"
            width="15"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.27778 0L8.91174 4.83688H14.1994L9.92159 7.82624L11.5555 12.6631L7.27778 9.67376L3.00001 12.6631L4.63397 7.82624L0.3562 4.83688H5.64382L7.27778 0Z"
              fill="#1DBEB4"
            />
          </svg>
        </div>
      </div>
      <p
        className="calificacionEntero"
      >
        6
      </p>
    </div>
  </div>
</div>
`;

exports[`Probando el componente <ScoreBar/> Deberia mostrar <ScoreBar/> correctamente con calificacion de 9.1 1`] = `
<div
  className="scoreBar delimiter"
>
  <div
    className="scoreBarChild delimiterChild"
  >
    <div
      className="barraIzq"
    >
      <p>
         
        <img
          alt="iconLocation"
          className="iconLocation"
          src="iconLocation.svg"
        />
          
         ciudad , pais
      </p>
      <p
        className="scoreBarReference"
      >
        referencia
      </p>
    </div>
    <div
      className="barraDer"
    >
      <div
        className="calificacionLetra"
      >
        <p>
          Excelente
        </p>
        <div
          className="calificacionEstrellas"
        >
          <svg
            fill="none"
            height="13"
            viewBox="0 0 15 13"
            width="15"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.27778 0L8.91174 4.83688H14.1994L9.92159 7.82624L11.5555 12.6631L7.27778 9.67376L3.00001 12.6631L4.63397 7.82624L0.3562 4.83688H5.64382L7.27778 0Z"
              fill="#1DBEB4"
            />
          </svg>
          <svg
            fill="none"
            height="13"
            viewBox="0 0 15 13"
            width="15"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.27778 0L8.91174 4.83688H14.1994L9.92159 7.82624L11.5555 12.6631L7.27778 9.67376L3.00001 12.6631L4.63397 7.82624L0.3562 4.83688H5.64382L7.27778 0Z"
              fill="#1DBEB4"
            />
          </svg>
          <svg
            fill="none"
            height="13"
            viewBox="0 0 15 13"
            width="15"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.27778 0L8.91174 4.83688H14.1994L9.92159 7.82624L11.5555 12.6631L7.27778 9.67376L3.00001 12.6631L4.63397 7.82624L0.3562 4.83688H5.64382L7.27778 0Z"
              fill="#1DBEB4"
            />
          </svg>
          <svg
            fill="none"
            height="13"
            viewBox="0 0 15 13"
            width="15"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.27778 0L8.91174 4.83688H14.1994L9.92159 7.82624L11.5555 12.6631L7.27778 9.67376L3.00001 12.6631L4.63397 7.82624L0.3562 4.83688H5.64382L7.27778 0Z"
              fill="#1DBEB4"
            />
          </svg>
          <svg
            fill="none"
            height="13"
            viewBox="0 0 15 13"
            width="15"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.27778 0L8.91174 4.83688H14.1994L9.92159 7.82624L11.5555 12.6631L7.27778 9.67376L3.00001 12.6631L4.63397 7.82624L0.3562 4.83688H5.64382L7.27778 0Z"
              fill="#1DBEB4"
            />
          </svg>
        </div>
      </div>
      <p
        className="calificacionEntero"
      >
        9
      </p>
    </div>
  </div>
</div>
`;

exports[`Probando el componente <Share/> Deberia mostrar <Share/> correctamente 1`] = `
<div>
  <ModalGateway
    target={<body />}
  />
</div>
`;

exports[`Probando el componente <Titlebar/> Deberia mostrar <TitleBar/> correctamente 1`] = `
<div
  className="titleBar delimiter"
>
  <div
    className="titleBarChild delimiterChild"
  >
    <div>
      <p>
        <Component />
      </p>
      <h2>
        nombreHotel
      </h2>
    </div>
    <div>
      <img
        alt="IconLocation"
        className="iconLocation"
        src="iconBack.svg"
      />
    </div>
  </div>
</div>
`;
